fixed schedule alignment after cutoff

--- a/src/components/Schedule/Schedule.css
+++ b/src/components/Schedule/Schedule.css
@@ -107,11 +107,19 @@ h2 {
   margin: 25px 0px;
 }
 
-#commingsoonimg {
-  /*margin-left: 12.5vw;*/
-  /*margin: auto;*/
-  /*justify-content: center;*/
-  /*align-items: center;*/
+
+@media only screen and (max-width: 1280px) {
+
+  #schedule {
+    display: flex;
+  }
+
+  #commingsoonimg {
+    margin-left: 12.5vw;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 @media only screen and (max-width: 480px) {
